# xpuctl

./: Cargo.toml  README.md  xpuctl.conf
src/: discover.rs  list.rs  main.rs  types.rs  view.rs
src/redfish/: bluefield.rs  mod.rs  rest.rs  xpu.rs
