[package]
name = "xpuctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter", "local-time"] }

clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.8"}
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "2.0"
serde_json = "*"

reqwest = { version = "0.12", features = ["json"] }
http = "1.0"
bytes = "1"
base64 = "0.22"
url = { version = "2", features = ["serde"] }